Se creó con Colab

--- a/Prueba Kolmogorov Smirnov.ipynb
+++ b/Prueba Kolmogorov Smirnov.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmv9HqU6vQhw7HAAwcP5DW",
+      "authorship_tag": "ABX9TyNtLyxyOQYTnPSJP4myp7yK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,18 +85,18 @@
         "\n",
         "# Comparamos D con K para determinar si rechazamos o no rechazamos la hipótesis nula\n",
         "if D_max < K:\n",
-        "    print(\"\\nConclusión: Se acepta la hipótesis nula.\")\n",
+        "    print(\"\\nSe acepta la hipótesis nula.\")\n",
         "else:\n",
-        "    print(\"\\nConclusión: Se rechaza la hipótesis nula.\")"
+        "    print(\"\\nSe rechaza la hipótesis nula.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dKJDbpeXVU68",
-        "outputId": "6e8bda6c-1dcf-46a4-fcac-073ab1c91a91"
+        "outputId": "98826ad9-15ea-4e31-e1fa-20c0b6497059"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
             "Máximo entre D+ y D-: 0.16900000000000004\n",
             "Valor crítico:  0.2716197278645101\n",
             "\n",
-            "Conclusión: Aceptamos la hipótesis nula.\n"
+            "Se acepta la hipótesis nula.\n"
           ]
         }
       ]
