Se creó con Colab

--- a/Generador cuadrado medio.ipynb
+++ b/Generador cuadrado medio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9iwuPDcIYjN9toZA9jPAd",
+      "authorship_tag": "ABX9TyP0ae36KA+wqFPr9g3b/kyA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "e-_73sDenpX8"
       },
-      "execution_count": 33,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "orXXtafFnqjX"
       },
-      "execution_count": 34,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -97,19 +97,37 @@
     {
       "cell_type": "code",
       "source": [
-        "def cuadrado_medio(semilla, n): #definimos la función cuadrado medio\n",
+        "def cuadrado_medio(semilla, n): # definimos la función cuadrado medio\n",
         "    datos = []  # almacenar los datos de la tabla\n",
+        "    ciclo = {}  # diccionario para rastrear ciclos\n",
+        "    ciclo_inicio = -1  # para detectar el inicio del ciclo\n",
         "\n",
         "# iniciamos el proceso iterativo con el bucle for\n",
         "    for i in range(n):\n",
         "        cuadrado = semilla ** 2  # elevar el número de la semilla al cuadrado\n",
         "        cuadrado_str = str(cuadrado).zfill(8)  # rellenar con ceros si es necesario\n",
-        "        medios = cuadrado_str[2:6] # extraer los 4 dígitos centrales\n",
-        "        datos.append([i + 1, semilla, cuadrado, medios]) # almacenar en la lista\n",
-        "        semilla = int(medios) # Convertir los dígitos extraídos en el nuevo número semilla\n",
+        "        medios = cuadrado_str[2:6]  # extraer los 4 dígitos centrales\n",
+        "        x_n1 = int(medios)  # convertir los dígitos extraídos en el nuevo número semilla\n",
+        "        normalizar = x_n1 / 10000  # normalización\n",
         "\n",
-        "        encabezados = [\"i\", \"x_n\", \"x_n^2\", \"x_n+1\"] # definimos nombres de los encabezados de la tabla\n",
+        "        # guardar en la tabla\n",
+        "        datos.append([i + 1, semilla, cuadrado, medios, normalizar])\n",
+        "\n",
+        "        # verificamos si se repite la semilla, es decir, el ciclo de vida de la semilla\n",
+        "        if x_n1 in ciclo:\n",
+        "            ciclo_inicio = ciclo[x_n1]\n",
+        "            break\n",
+        "        ciclo[x_n1] = i + 1  # guardar índice de aparición\n",
+        "        semilla = x_n1  # actualizar semilla\n",
+        "\n",
+        "    encabezados = [\"i\", \"x_n\", \"x_n^2\", \"x_n+1\", \"X_n+1 / 10000\"] # definimos nombres de los encabezados de la tabla\n",
         "    print(tabulate(datos, headers=encabezados, tablefmt=\"grid\")) # imprime la tabla\n",
+        "\n",
+        "    # Imprimir el ciclo de vida de la semilla\n",
+        "    if ciclo_inicio != -1:\n",
+        "        print(f\"\\nCiclo de vida de la semilla: \\nSe detectó un ciclo que comienza en la iteración {ciclo_inicio}, con una longitud de {i + 1 - ciclo_inicio}\")\n",
+        "    else:\n",
+        "        print(\"\\nCiclo de vida de la semilla: \\nNo se detectó ningún ciclo dentro del número de iteraciones\")\n",
         "\n",
         "cuadrado_medio(semilla, n) # llamamos nuestra función de cuadrado medio para ejecutar el programa"
       ],
@@ -118,117 +136,108 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6ef5bb1-1b11-4d57-cde3-8307d90a8bd4"
+        "outputId": "141dfc32-19c3-4f4e-b3fd-42e97dbcede2"
       },
-      "execution_count": 35,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----+-------+----------+---------+\n",
-            "|   i |   x_n |    x_n^2 |   x_n+1 |\n",
-            "+=====+=======+==========+=========+\n",
-            "|   1 |  7965 | 63441225 |    4412 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   2 |  4412 | 19465744 |    4657 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   3 |  4657 | 21687649 |    6876 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   4 |  6876 | 47279376 |    2793 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   5 |  2793 |  7800849 |    8008 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   6 |  8008 | 64128064 |    1280 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   7 |  1280 |  1638400 |    6384 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   8 |  6384 | 40755456 |    7554 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|   9 |  7554 | 57062916 |    0629 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  10 |   629 |   395641 |    3956 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  11 |  3956 | 15649936 |    6499 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  12 |  6499 | 42237001 |    2370 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  13 |  2370 |  5616900 |    6169 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  14 |  6169 | 38056561 |    0565 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  15 |   565 |   319225 |    3192 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  16 |  3192 | 10188864 |    1888 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  17 |  1888 |  3564544 |    5645 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  18 |  5645 | 31866025 |    8660 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  19 |  8660 | 74995600 |    9956 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  20 |  9956 | 99121936 |    1219 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  21 |  1219 |  1485961 |    4859 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  22 |  4859 | 23609881 |    6098 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  23 |  6098 | 37185604 |    1856 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  24 |  1856 |  3444736 |    4447 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  25 |  4447 | 19775809 |    7758 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  26 |  7758 | 60186564 |    1865 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  27 |  1865 |  3478225 |    4782 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  28 |  4782 | 22867524 |    8675 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  29 |  8675 | 75255625 |    2556 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  30 |  2556 |  6533136 |    5331 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  31 |  5331 | 28419561 |    4195 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  32 |  4195 | 17598025 |    5980 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  33 |  5980 | 35760400 |    7604 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  34 |  7604 | 57820816 |    8208 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  35 |  8208 | 67371264 |    3712 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  36 |  3712 | 13778944 |    7789 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  37 |  7789 | 60668521 |    6685 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  38 |  6685 | 44689225 |    6892 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  39 |  6892 | 47499664 |    4996 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  40 |  4996 | 24960016 |    9600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  41 |  9600 | 92160000 |    1600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  42 |  1600 |  2560000 |    5600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  43 |  5600 | 31360000 |    3600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  44 |  3600 | 12960000 |    9600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  45 |  9600 | 92160000 |    1600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  46 |  1600 |  2560000 |    5600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  47 |  5600 | 31360000 |    3600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  48 |  3600 | 12960000 |    9600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  49 |  9600 | 92160000 |    1600 |\n",
-            "+-----+-------+----------+---------+\n",
-            "|  50 |  1600 |  2560000 |    5600 |\n",
-            "+-----+-------+----------+---------+\n"
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   i |   x_n |    x_n^2 |   x_n+1 |   X_n+1 / 10000 |\n",
+            "+=====+=======+==========+=========+=================+\n",
+            "|   1 |  7965 | 63441225 |    4412 |          0.4412 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   2 |  4412 | 19465744 |    4657 |          0.4657 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   3 |  4657 | 21687649 |    6876 |          0.6876 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   4 |  6876 | 47279376 |    2793 |          0.2793 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   5 |  2793 |  7800849 |    8008 |          0.8008 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   6 |  8008 | 64128064 |    1280 |          0.128  |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   7 |  1280 |  1638400 |    6384 |          0.6384 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   8 |  6384 | 40755456 |    7554 |          0.7554 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|   9 |  7554 | 57062916 |    0629 |          0.0629 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  10 |   629 |   395641 |    3956 |          0.3956 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  11 |  3956 | 15649936 |    6499 |          0.6499 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  12 |  6499 | 42237001 |    2370 |          0.237  |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  13 |  2370 |  5616900 |    6169 |          0.6169 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  14 |  6169 | 38056561 |    0565 |          0.0565 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  15 |   565 |   319225 |    3192 |          0.3192 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  16 |  3192 | 10188864 |    1888 |          0.1888 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  17 |  1888 |  3564544 |    5645 |          0.5645 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  18 |  5645 | 31866025 |    8660 |          0.866  |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  19 |  8660 | 74995600 |    9956 |          0.9956 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  20 |  9956 | 99121936 |    1219 |          0.1219 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  21 |  1219 |  1485961 |    4859 |          0.4859 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  22 |  4859 | 23609881 |    6098 |          0.6098 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  23 |  6098 | 37185604 |    1856 |          0.1856 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  24 |  1856 |  3444736 |    4447 |          0.4447 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  25 |  4447 | 19775809 |    7758 |          0.7758 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  26 |  7758 | 60186564 |    1865 |          0.1865 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  27 |  1865 |  3478225 |    4782 |          0.4782 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  28 |  4782 | 22867524 |    8675 |          0.8675 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  29 |  8675 | 75255625 |    2556 |          0.2556 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  30 |  2556 |  6533136 |    5331 |          0.5331 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  31 |  5331 | 28419561 |    4195 |          0.4195 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  32 |  4195 | 17598025 |    5980 |          0.598  |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  33 |  5980 | 35760400 |    7604 |          0.7604 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  34 |  7604 | 57820816 |    8208 |          0.8208 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  35 |  8208 | 67371264 |    3712 |          0.3712 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  36 |  3712 | 13778944 |    7789 |          0.7789 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  37 |  7789 | 60668521 |    6685 |          0.6685 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  38 |  6685 | 44689225 |    6892 |          0.6892 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  39 |  6892 | 47499664 |    4996 |          0.4996 |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  40 |  4996 | 24960016 |    9600 |          0.96   |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  41 |  9600 | 92160000 |    1600 |          0.16   |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  42 |  1600 |  2560000 |    5600 |          0.56   |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  43 |  5600 | 31360000 |    3600 |          0.36   |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "|  44 |  3600 | 12960000 |    9600 |          0.96   |\n",
+            "+-----+-------+----------+---------+-----------------+\n",
+            "\n",
+            "Ciclo de vida de la semilla: \n",
+            "Se detectó un ciclo que comienza en la iteración 40, con una longitud de 4\n"
           ]
         }
       ]
