--- a/ejercicio_del_volado_usando_random,_visto_en_clase.ipynb
+++ b/ejercicio_del_volado_usando_random,_visto_en_clase.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/1uzoHIH9Y/CLdahw/P7p",
+      "authorship_tag": "ABX9TyNOrRB/+uBz+V4M0itFEKUp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/vanecornejo/Simulaci-n-I/blob/main/ejercicio_del_volado_usando_random%2C_visto_en_clase.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio volado"
+      ],
+      "metadata": {
+        "id": "wYkM27uywoe1"
+      }
     },
     {
       "cell_type": "code",
