Se creó con Colab

--- a/Inventario.ipynb
+++ b/Inventario.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/A9hU4bjxN833eu27Y/hB",
+      "authorship_tag": "ABX9TyNDLIzvBa47UAg2SWaWItmG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,10 @@
         "- Costo de inventario = 20/unidad/año\n",
         "- Costo de faltante = 50/unidad\n",
         "\n",
-        "Si el inventario inicial se asume en 150 unidades, ¿determine la cantidad óptima a ordenar (q) y el nivel óptimo de reorden (R)?"
+        "Si el inventario inicial se asume en 150 unidades, ¿determine la cantidad óptima a ordenar (q) y el nivel óptimo de reorden (R)?\n",
+        "\n",
+        "## *Solución al problema*\n",
+        "Se usa el Método de la Transformada Inversa para simular la demanda del mes y el tiempo de entrega de una orden, se genera un numero aleatorio y si cae dentro de un intervalo generado por la probabilidad se suman acumulativamente las probabilidades para obtener estos intervalos."
       ],
       "metadata": {
         "id": "uRT02pZgP15v"
@@ -87,12 +90,226 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 127,
       "metadata": {
         "id": "HwXZhjUMJdmH"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# importamos librerías\n",
+        "import random\n",
+        "import pandas as pd\n",
+        "from tabulate import tabulate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random.seed(42) # para reproducibilidad\n",
+        "\n",
+        "# Ingresamos los datos que nos da el problema\n",
+        "cantidades = [35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]\n",
+        "\n",
+        "probabilidades = [0.010, 0.015, 0.020, 0.020, 0.022, 0.023, 0.025, 0.027, 0.028, 0.029, 0.035, 0.045, 0.060,\n",
+        "                  0.065, 0.070, 0.080, 0.075, 0.070, 0.065, 0.060, 0.050, 0.040, 0.030, 0.016, 0.015, 0.005]\n",
+        "\n",
+        "tiempos_entrega = [1, 2, 3]\n",
+        "prob_tiempos = [0.3, 0.4, 0.3]\n",
+        "\n",
+        "factores_estacionales = [1.20, 1.00, 0.90, 0.80, 0.80, 0.70, 0.80, 0.90, 1.00, 1.20, 1.30, 1.40]\n",
+        "\n",
+        "costo_orden = 100\n",
+        "costo_inventario_anual = 20\n",
+        "costo_faltante = 50"
+      ],
+      "metadata": {
+        "id": "bn-l7gJr-Nq0"
+      },
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Definimos la función donde haremos la simulación del comportamiento del sistema mes a mes por 12 meses para un inventario inicial de 150.\n",
+        "\n",
+        "Si el inventario disponible es menor o igual a R y no hay pedidos pendientes, realizar un pedido de q unidades."
+      ],
+      "metadata": {
+        "id": "tNvWILFu-_N0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def simular(q, R, inventario_inicial=150, meses=12, imprimir_tabla=True):\n",
+        "    inventario = inventario_inicial\n",
+        "    pedidos_pendientes = [] # creamos una lista para guardar los pedidos pendientes\n",
+        "\n",
+        "    # Inicializamos\n",
+        "    total_orden = 0\n",
+        "    total_inventario = 0\n",
+        "    total_faltante = 0\n",
+        "\n",
+        "    # Listas para la tabla\n",
+        "    tabla = {\n",
+        "        \"Mes\": [],\n",
+        "        \"Inventario Inicial\": [],\n",
+        "        \"Número Aleatorio\": [],\n",
+        "        \"Demanda Ajustada\": [],\n",
+        "        \"Inventario Final\": [],\n",
+        "        \"Faltante\": [],\n",
+        "        \"Orden\": [],\n",
+        "        \"Inventario Mensual Promedio\": []\n",
+        "    }\n",
+        "\n",
+        "    for mes in range(meses):\n",
+        "        inv_ini = inventario\n",
+        "        pedido_realizado = \"No\"\n",
+        "\n",
+        "        # Revisar si llega algún pedido\n",
+        "        nuevos_pedidos = []\n",
+        "        for llegada, cantidad in pedidos_pendientes:\n",
+        "            if llegada == mes:\n",
+        "                inventario += cantidad\n",
+        "            else:\n",
+        "                nuevos_pedidos.append((llegada, cantidad))\n",
+        "        pedidos_pendientes = nuevos_pedidos\n",
+        "\n",
+        "        # Generar número aleatorio y demanda ajustada\n",
+        "        u = random.random()\n",
+        "        demanda_base = random.choices(cantidades, weights=probabilidades, k=1)[0]\n",
+        "        demanda_ajustada = round(demanda_base * factores_estacionales[mes])\n",
+        "\n",
+        "        # Faltantes\n",
+        "        if demanda_ajustada > inventario:\n",
+        "            faltante = demanda_ajustada - inventario\n",
+        "            inventario = 0\n",
+        "        else:\n",
+        "            faltante = 0\n",
+        "            inventario -= demanda_ajustada\n",
+        "\n",
+        "        # Costos\n",
+        "        total_faltante += faltante * costo_faltante\n",
+        "        total_inventario += inventario * (costo_inventario_anual / 12)\n",
+        "\n",
+        "        # Pedido si es necesario\n",
+        "        if inventario <= R and not pedidos_pendientes:\n",
+        "            tiempo = random.choices(tiempos_entrega, weights=prob_tiempos, k=1)[0]\n",
+        "            llegada = mes + tiempo\n",
+        "            if llegada < meses:\n",
+        "                pedidos_pendientes.append((llegada, q))\n",
+        "            total_orden += costo_orden\n",
+        "            pedido_realizado = \"Sí\"\n",
+        "\n",
+        "        # Guardamos los datos calculados en la tabla\n",
+        "        tabla[\"Mes\"].append(mes + 1)\n",
+        "        tabla[\"Inventario Inicial\"].append(inv_ini)\n",
+        "        tabla[\"Número Aleatorio\"].append(round(u, 4))\n",
+        "        tabla[\"Demanda Ajustada\"].append(demanda_ajustada)\n",
+        "        tabla[\"Inventario Final\"].append(inventario)\n",
+        "        tabla[\"Faltante\"].append(faltante)\n",
+        "        tabla[\"Orden\"].append(pedido_realizado)\n",
+        "        tabla[\"Inventario Mensual Promedio\"].append(round((inv_ini + inventario) / 2, 2))\n",
+        "\n",
+        "    # Creamos un DataFrame\n",
+        "    df = pd.DataFrame(tabla)\n",
+        "\n",
+        "    # Costos\n",
+        "    costo_total = total_orden + total_inventario + total_faltante\n",
+        "\n",
+        "    if imprimir_tabla:\n",
+        "      print(f\"\\n>>> Mejor combinación: q = {q}, R = {R}\\n\")\n",
+        "      print(tabulate(df, headers='keys', tablefmt='psql'))\n",
+        "\n",
+        "      print(f\"  Costo de ordenar:     ${total_orden:.2f}\")\n",
+        "      print(f\"  Costo de inventario:  ${total_inventario:.2f}\")\n",
+        "      print(f\"  Costo de faltante:    ${total_faltante:.2f}\")\n",
+        "      print(f\"  Costo total anual:    ${costo_total:.2f}\")\n",
+        "\n",
+        "    return costo_total, df, total_orden, total_inventario, total_faltante"
+      ],
+      "metadata": {
+        "id": "LZeJsa0R-7iv"
+      },
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Definimos una función para buscar los valores óptimos de q y R que haga distintas combinaciones de estos y seleccionar la combinación con menor costo total anual.\n"
+      ],
+      "metadata": {
+        "id": "jXNR2pRGBScK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def buscar_optimo(valores_q, valores_R):\n",
+        "    mejor_costo = float('inf')\n",
+        "    mejor_q = mejor_R = None\n",
+        "    mejor_df = None\n",
+        "    mejor_costos = ()\n",
+        "\n",
+        "    for q in valores_q:\n",
+        "        for R in valores_R:\n",
+        "            costo, df, orden, inventario, faltante = simular(q, R, imprimir_tabla=False)\n",
+        "            if costo < mejor_costo:\n",
+        "                mejor_costo = costo\n",
+        "                mejor_q = q\n",
+        "                mejor_R = R\n",
+        "                mejor_df = df\n",
+        "                mejor_costos = (orden, inventario, faltante)\n",
+        "\n",
+        "    # Imprimimos para el óptimo\n",
+        "    simular(mejor_q, mejor_R, imprimir_tabla=True)\n",
+        "\n",
+        "valores_q = [100, 150, 200, 250]\n",
+        "valores_R = [50, 75, 100, 125]\n",
+        "\n",
+        "buscar_optimo(valores_q, valores_R)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G9ABcjdICHii",
+        "outputId": "478fe20d-83fd-4f39-c903-7aebaa2560b8"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            ">>> Mejor combinación: q = 150, R = 75\n",
+            "\n",
+            "+----+-------+----------------------+--------------------+--------------------+--------------------+------------+---------+-------------------------------+\n",
+            "|    |   Mes |   Inventario Inicial |   Número Aleatorio |   Demanda Ajustada |   Inventario Final |   Faltante | Orden   |   Inventario Mensual Promedio |\n",
+            "|----+-------+----------------------+--------------------+--------------------+--------------------+------------+---------+-------------------------------|\n",
+            "|  0 |     1 |                  150 |             0.7193 |                 60 |                 90 |          0 | No      |                         120   |\n",
+            "|  1 |     2 |                   90 |             0.8306 |                 50 |                 40 |          0 | Sí      |                          65   |\n",
+            "|  2 |     3 |                   40 |             0.7437 |                 44 |                  0 |          4 | No      |                          20   |\n",
+            "|  3 |     4 |                    0 |             0.2592 |                 36 |                  0 |         36 | No      |                           0   |\n",
+            "|  4 |     5 |                    0 |             0.6377 |                 42 |                108 |          0 | No      |                          54   |\n",
+            "|  5 |     6 |                  108 |             0.5213 |                 36 |                 72 |          0 | Sí      |                          90   |\n",
+            "|  6 |     7 |                   72 |             0.0775 |                 37 |                185 |          0 | No      |                         128.5 |\n",
+            "|  7 |     8 |                  185 |             0.2717 |                 42 |                143 |          0 | No      |                         164   |\n",
+            "|  8 |     9 |                  143 |             0.5402 |                 42 |                101 |          0 | No      |                         122   |\n",
+            "|  9 |    10 |                  101 |             0.2313 |                 62 |                 39 |          0 | Sí      |                          70   |\n",
+            "| 10 |    11 |                   39 |             0.0642 |                 62 |                  0 |         23 | Sí      |                          19.5 |\n",
+            "| 11 |    12 |                    0 |             0.4158 |                 62 |                  0 |         62 | Sí      |                           0   |\n",
+            "+----+-------+----------------------+--------------------+--------------------+--------------------+------------+---------+-------------------------------+\n",
+            "  Costo de ordenar:     $500.00\n",
+            "  Costo de inventario:  $1296.67\n",
+            "  Costo de faltante:    $6250.00\n",
+            "  Costo total anual:    $8046.67\n"
+          ]
+        }
+      ]
     }
   ]
 }
